[gd_scene load_steps=9 format=3 uid="uid://d4hwqnpk7egrr"]

[ext_resource type="Script" path="res://src/dialogue/dialogue_system.gd" id="1_5acew"]
[ext_resource type="Texture2D" uid="uid://boafihnsix4tk" path="res://assets/UI/RectangleBox_96x96.png" id="2_j115j"]
[ext_resource type="FontFile" uid="uid://d4gqm1qpyhors" path="res://assets/fonts/ConnectionII.otf" id="3_mlo0m"]
[ext_resource type="AudioStream" uid="uid://cq5k3d0j5fk3m" path="res://assets/sounds/voice_blip.wav" id="4_ha2x3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3n28"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 1.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id="Animation_pbc21"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_i1w7k"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.333333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1.4, 1.2, 1.4, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dmcea"]
_data = {
"RESET": SubResource("Animation_pbc21"),
"default": SubResource("Animation_i1w7k")
}

[node name="DialogueSystem" type="CanvasLayer"]
script = ExtResource("1_5acew")
dialogue_file = "res://src/dialogue/dialogue.json"

[node name="DialogueUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 495.0
offset_right = 1228.0
offset_bottom = 659.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_j115j")
region_rect = Rect2(0, -0.332462, 96.499, 96.3325)
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Name" type="Label" parent="DialogueUI/NinePatchRect"]
layout_mode = 1
offset_left = 26.0
offset_top = 19.0
offset_right = 107.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("3_mlo0m")
theme_override_font_sizes/font_size = 30
text = "Name"

[node name="Text" type="Label" parent="DialogueUI/NinePatchRect"]
layout_mode = 1
offset_left = 53.0
offset_top = 59.0
offset_right = 118.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("3_mlo0m")
theme_override_font_sizes/font_size = 24
text = "Text"

[node name="Timer" type="Timer" parent="DialogueUI"]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialogueUI"]
stream = ExtResource("4_ha2x3")
max_polyphony = 6
bus = &"Dialogue"

[node name="NextDialogue" type="Panel" parent="DialogueUI"]
self_modulate = Color(0.559023, 0.271975, 0.190951, 1)
layout_mode = 0
offset_left = 1159.0
offset_top = 670.0
offset_right = 1255.0
offset_bottom = 704.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q3n28")

[node name="Label" type="Label" parent="DialogueUI/NextDialogue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_mlo0m")
theme_override_font_sizes/font_size = 20
text = "NEXT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogueUI/NextDialogue"]
libraries = {
"": SubResource("AnimationLibrary_dmcea")
}
autoplay = "default"
